<resources>
    <string name="app_name">Discover New Music</string>
    <string name="genre_1_text">Hip Hop</string>
    <string name="genre_2_text">RnB</string>
    <string name="genre_3_text">Pop</string>
    <string name="genre_4_text">Rock</string>
    <string name="genre_5_text">EDM / Dance</string>
    <string name="genre_6_text">Classical</string>
    <string name="genre_7_text">Jazz</string>
    <string name="genre_screen_explanation">
        This screen should list the hottest songs for the chosen.\n
        \n
        Using the MediaPlayer class from Android's SDK, we can playback audio from a source.
    </string>
    <string name="song_detail_explanation">This activity displays the chosen song and will stream it.</string>
</resources>
